--- a/javascriptquiz.html
+++ b/javascriptquiz.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <title>JavaScript Quiz</title>
         <link rel="stylesheet" href="stylesheetquiz.css">
-        <link rel="stylesheet" href="script.js">
     </head>
     <body>
         <header>
@@ -114,5 +113,6 @@
         <footer>
             <p>Quiz<span>Tion</span></p><p class="takeshi">made by Takeshi Yamamoto</p>
         </footer>
+        <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
